--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>AR + YouTube (Posisi Benar)</title>
+  <title>AR + YouTube (Tombol di Belakang Model)</title>
   
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -29,49 +29,42 @@
         rotation-control>
       </a-entity>
 
-      <!-- CONTAINER VIDEO (semua di dalam sini, posisi terkunci) -->
-      <a-entity id="videoContainer" position="0 1.0 0" rotation="0 0 0">
+      <!-- TOMBOL PLAY (tepat di belakang model, di dalam AR) -->
+      <a-entity id="playButtonContainer" position="0 0.5 -0.7">
 
-        <!-- Plane utama (untuk iframe) -->
+        <!-- Area klik (transparan) -->
         <a-plane
-          id="videoPlane"
-          width="2.4"
-          height="1.35"
-          material="color: #000; shader: flat"
+          id="clickArea"
+          width="1.0"
+          height="1.0"
+          material="opacity: 0; transparent: true"
           class="clickable"
           youtube-player>
         </a-plane>
 
-        <!-- POSTER YouTube -->
-        <a-image
-          id="videoPoster"
-          src="https://img.youtube.com/vi/0YbJySC88OI/hqdefault.jpg"
-          width="2.4"
-          height="1.35"
-          position="0 0 0.01"
-          material="shader: flat">
-        </a-image>
+        <!-- Tombol Play (lingkaran + segitiga) -->
+        <a-cylinder 
+          radius="0.20" 
+          height="0.03" 
+          color="white" 
+          opacity="0.95"
+          position="0 0 0.01">
+        </a-cylinder>
+        <a-triangle 
+          position="0.06 0 0.02" 
+          scale="0.16 0.20 1" 
+          rotation="0 0 90" 
+          color="#FF0000">
+        </a-triangle>
 
-        <!-- TOMBOL PLAY (besar & di tengah) -->
-        <a-entity id="playButton" position="0 0 0.02">
-          <a-cylinder radius="0.28" height="0.03" color="white" opacity="0.95"></a-cylinder>
-          <a-triangle 
-            position="0.09 0 0.015" 
-            scale="0.22 0.28 1" 
-            rotation="0 0 90" 
-            color="#FF0000">
-          </a-triangle>
-        </a-entity>
-
-        <!-- Teks Petunjuk (di bawah video) -->
+        <!-- Teks kecil -->
         <a-text
-          value="TAP UNTUK PLAY VIDEO"
+          value="PLAY"
           color="white"
           align="center"
-          width="5"
-          position="0 -0.85 0.02"
-          font="mozillavr"
-          side="double">
+          width="2.5"
+          position="0 -0.30 0.02"
+          font="mozillavr">
         </a-text>
 
       </a-entity>
@@ -93,15 +86,15 @@
 
   <!-- SCRIPT -->
   <script>
-    const YOUTUBE_ID = '0YbJySC88OI';
+    const YOUTUBE_ID = '0YbJySC88OI'; // Ganti ID video jika perlu
 
-    // 1. Pindahkan model + container ke scene
+    // 1. Pindahkan model + tombol ke scene (tetap di AR)
     AFRAME.registerComponent('registerevents', {
       init: function () {
         const marker = this.el;
         marker.addEventListener('markerFound', () => {
           const model = document.querySelector('#arModel');
-          const container = document.querySelector('#videoContainer');
+          const btnContainer = document.querySelector('#playButtonContainer');
           const scene = document.querySelector('a-scene');
           const pos = marker.object3D.position.clone();
           const rot = marker.object3D.rotation.clone();
@@ -115,14 +108,14 @@
             z: THREE.MathUtils.radToDeg(rot.z)
           });
 
-          // Pindahkan container video
-          scene.appendChild(container);
-          container.setAttribute('position', { 
-            x: pos.x, 
-            y: pos.y + 1.0,  // Tinggi dari tanah
-            z: pos.z 
+          // Pindahkan tombol (di belakang model, tetap di dalam AR)
+          scene.appendChild(btnContainer);
+          btnContainer.setAttribute('position', {
+            x: pos.x,
+            y: pos.y + 0.5,     // sama tinggi dengan model
+            z: pos.z - 0.7      // 0.7 meter di belakang model
           });
-          container.setAttribute('rotation', {
+          btnContainer.setAttribute('rotation', {
             x: THREE.MathUtils.radToDeg(rot.x),
             y: THREE.MathUtils.radToDeg(rot.y),
             z: THREE.MathUtils.radToDeg(rot.z)
@@ -133,7 +126,7 @@
       }
     });
 
-    // 2. Rotasi model
+    // 2. Rotasi model dengan jari
     AFRAME.registerComponent('rotation-control', {
       init: function () {
         const el = this.el;
@@ -166,15 +159,22 @@
       }
     });
 
-    // 3. YouTube Player
+    // 3. Munculkan video YouTube di depan model saat tombol diklik
     AFRAME.registerComponent('youtube-player', {
       init: function () {
-        const plane = this.el;
+        const area = this.el;
         let loaded = false;
 
-        plane.addEventListener('click', () => {
+        area.addEventListener('click', () => {
           if (loaded) return;
           loaded = true;
+
+          // Buat layar video di depan model
+          const videoPlane = document.createElement('a-plane');
+          videoPlane.setAttribute('width', '2.4');
+          videoPlane.setAttribute('height', '1.35');
+          videoPlane.setAttribute('position', '0 0.5 0.7'); // 0.7 m di depan model
+          videoPlane.setAttribute('material', 'color', '#000');
 
           const iframe = document.createElement('iframe');
           iframe.src = `https://www.youtube.com/embed/${YOUTUBE_ID}?autoplay=1&loop=1&playlist=${YOUTUBE_ID}&controls=1&rel=0&modestbranding=1`;
@@ -182,15 +182,28 @@
           iframe.allowFullscreen = true;
           iframe.style = 'width:100%; height:100%; border:none;';
 
-          plane.setAttribute('material', 'src', iframe);
-          plane.setAttribute('material', 'shader', 'html');
+          videoPlane.setAttribute('material', 'src', iframe);
+          videoPlane.setAttribute('material', 'shader', 'html');
 
-          // Hapus elemen visual
+          // Tambahkan ke scene (tetap di AR)
+          const scene = document.querySelector('a-scene');
+          scene.appendChild(videoPlane);
+
+          // Pindahkan posisi video agar tetap sinkron
+          const model = document.querySelector('#arModel');
+          const modelPos = model.getAttribute('position');
+          const modelRot = model.getAttribute('rotation');
+          videoPlane.setAttribute('position', {
+            x: modelPos.x,
+            y: modelPos.y,
+            z: modelPos.z + 0.7
+          });
+          videoPlane.setAttribute('rotation', modelRot);
+
+          // Hapus tombol setelah diklik
           setTimeout(() => {
-            document.querySelector('#videoPoster')?.remove();
-            document.querySelector('#playButton')?.remove();
-            document.querySelector('a-text')?.remove();
-          }, 400);
+            document.querySelector('#playButtonContainer')?.remove();
+          }, 300);
         });
       }
     });
